Fix style bugs on iOS. Add error handling for AR.js errors.

--- a/src/styles/base/core.scss
+++ b/src/styles/base/core.scss
@@ -18,24 +18,19 @@ body {
 }
 
 body {
+  overflow: hidden;
   font-family: $base-font-family;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.33;
   color: $text;
-  background-color: $background;
+  background-color: $black;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-.wrapper {
-  height: auto;
-  min-height: 100%;
-  overflow: hidden;
 }
 
 //=======================
@@ -110,6 +105,8 @@ canvas {
 #scene {
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 2;
 
