--- a/src/styles/utils/ui.scss
+++ b/src/styles/utils/ui.scss
@@ -95,7 +95,7 @@
 //=======================
 
 @mixin toast {
-  position: absolute;
+  position: fixed;
   bottom: 15px;
   left: 50%;
   z-index: 7;
